# pyro

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODOS.md  go.mod  go.sum  network-requests.txt  ui_embed.go
.github/workflows/: auto-tag.yml  ci.yml  publish-sdk.yml  release.yml
cmd/agent/: init_linux.go  init_other.go  main.go  main_test.go  vsock_linux.go  vsock_other.go
cmd/fcctl/: build.go  main.go  setup.go
cmd/pyro/: build.go  doctor.go  main.go  setup.go
cmd/server/: main.go
deploy/: firecrackerlacker.service  pyro.service  setup-bridge.sh
examples/code-runner/: main.py  requirements.txt
examples/langchain-agent/: main.py  requirements.txt
internal/api/: audit.go  eventbus.go  images.go  images_test.go  keys.go  metrics_middleware.go  middleware.go  quota.go  quota_test.go  router.go  router_test.go  sse.go  ui.go  ws.go
internal/observability/: otel.go
internal/protocol/: codec.go  codec_test.go  messages.go
internal/sandbox/: fcapi.go  files.go  images.go  images_labels_test.go  images_test.go  manager.go  network.go  pool.go  pool_test.go  reaper.go  vsock_linux.go  vsock_other.go
internal/store/: audit.go  audit_test.go  models.go  sqlite.go  sqlite_test.go
issues/: 04-sse-image-lifecycle-events.md  08-oci-labels-on-image-info.md
issues/done/: 09-sdk-python-images.md  (+7 more)
ralph/: prompt.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/pyro_sdk/: __init__.py  client.py  errors.py  images.py  models.py  sandbox.py
sdk/python/tests/: test_images.py  test_integration.py
ui/: DESIGN.md  package.json  vite.config.js
(+46 files in other folders)
