[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyro-sdk"
version = "0.1.0"
description = "Python SDK for Pyro — open-source sandbox platform for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Danie van Zyl" }]
keywords = ["sandbox", "microvm", "firecracker", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Homepage = "https://github.com/danievanzyl/pyro"
Repository = "https://github.com/danievanzyl/pyro"

[tool.hatch.build.targets.wheel]
packages = ["src/pyro_sdk"]
